--- a/build.gradle
+++ b/build.gradle
@@ -18,4 +18,8 @@ dependencies {
     compile group: 'org.thymeleaf', name: 'thymeleaf-spring5', version: '3.0.11.RELEASE'
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.4.3.Final'
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.22'
+
+    implementation group: 'org.springframework', name: 'spring-aop', version: '5.3.20'
+    implementation group: 'org.springframework', name: 'spring-aspects', version: '5.3.20'
+
 }
